# clide

./: .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_ZH.md  SECURITY.md  llms-zh.txt  llms.txt  package-lock.json  package.json  robots.txt
.github/: FUNDING.yml  repository-seo.txt
docs/: blog-tauri-ssh-ai.md  demo-recording.md  promotion-copy.md  promotion-setup.md  release-announcement-template.md
landing/: README.md  index.html  robots.txt  sitemap.xml
scripts/: aiterm-mcp-stdio.mjs  ci-npm-install.mjs  generate-landing-hero.mjs  generate-nsis-images.mjs  generate-rounded-icons.mjs  git-commit-no-cursor.sh  package-windows-portable.mjs  (+9 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_logging.rs  app_paths.rs  browser_policy.rs  browser_webview.rs  connect_tool.rs  lib.rs  main.rs  mcp_stdio_proxy.rs  mcp_stdio_server.rs  process_util.rs  runtime.rs  secrets.rs  shell_tool.rs  state.rs
src-tauri/src/ai/: acp_persistent.rs  codex_persistent.rs  detect.rs  mod.rs  ndjson_rpc.rs  persistent_manager.rs  provider.rs
src-tauri/src/claude/: bridge.rs  detect.rs  ide_connector.rs  mcp_register.rs  mod.rs  session.rs  tools.rs
src-tauri/src/terminal/: channels.rs  command_prep.rs  exec_pool.rs  local.rs  local_fs.rs  manager.rs  mod.rs  output_buffer.rs  output_emit.rs  remote_fs.rs  remote_process.rs  remote_stats.rs  serial.rs  socks.rs  ssh.rs  ssh_auth.rs  ssh_jump.rs  telnet.rs  tunnel.rs  utf8_chunk.rs
(+151 files in other folders)
