[package]
name = "aiterm"
version = "0.1.33"
description = "AI Terminal — non-invasive shell with Claude Code integration"
authors = ["AITERM"]
edition = "2021"

[[bin]]
name = "clide"
path = "src/main.rs"

[lib]
name = "aiterm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
portpicker = "0.1"
parking_lot = "0.12"
which = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
tokio-serial = "5"
russh = "0.46"
russh-keys = "0.46"
portable-pty = "0.9"
base64 = "0.22"
